--- a/dream-journal/src/locales/fa/translation.json
+++ b/dream-journal/src/locales/fa/translation.json
@@ -1,3 +1,38 @@
 {
-  "title": "دفترچه خواب"
+  "app": {
+    "title": "دفترچه‌ی رویا"
+  },
+  "languages": {
+    "english": "English",
+    "farsi": "فارسی"
+  },
+  "dreams": {
+    "formTitle": {
+      "add": " رویای جدید",
+      "edit": "ویرایش رویا"
+    },
+    "formInputs": {
+      "title": {
+        "placeholder": "عنوان رویا را وارد کنید..."
+      },
+      "description": {
+        "placeholder": "توضیحات رویا را وارد کنید..."
+      },
+      "vibe": {
+        "all": "همه",
+        "good": "خوب 😃",
+        "bad": "بد 😭"
+      }
+    },
+    "actions": {
+      "add": "افزودن",
+      "edit": "ویرایش",
+      "cancel": "لغو"
+    }
+  },
+  "toolbar": {
+    "search": {
+      "placeholder": "جستجوی رویاها..."
+    }
+  }
 }
