--- a/dream-journal/src/locales/fa/translation.json
+++ b/dream-journal/src/locales/fa/translation.json
@@ -28,8 +28,28 @@
       "add": "افزودن",
       "edit": "ویرایش",
       "cancel": "لغو"
+    },
+    "notifications": {
+      "removed": "رویا با موفقیت حذف شد",
+      "add": "رویا با موفقیت اضافه شد",
+      "edit": "ویرایش رویا با موفقیت انجام شد"
     }
   },
+  "validation": {
+    "title": {
+      "required": "عنوان الزامی است",
+      "length": "عنوان باید بین ۳ تا ۱۶ کاراکتر باشد و نباید شامل کاراکترهای ویژه باشد!"
+    },
+    "description": {
+      "required": "توضیحات الزامی است",
+      "length": "توضیحات باید کمتر از ۵۰۰ کاراکتر باشد"
+    },
+    "date": {
+      "required": "تاریخ الزامی است",
+      "pastOnly": "تاریخ انتخاب‌ شده باید امروز یا گذشته باشد"
+    }
+  },
+
   "toolbar": {
     "search": {
       "placeholder": "جستجوی رویاها..."
